--- a/index.html
+++ b/index.html
@@ -6,32 +6,27 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Social links profile</title>
+  <title>Frontend Mentor | Blog preview card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-<div class="container">
-  <img src="assets/images/avatar-jessica.jpeg">
-  <h2>Jessica Randall</h2>
-  <h3> London, United Kingdom</h3>
-  <h4>"Front-end developer and avid reader."</h4>
-  <ul>
-    <li><a href="#">Github</a></li>
-    <li><a href="#">frontendmentor</a></li>
-    <li><a href="#">LinkedIn</a></li>
-    <li><a href="#">Twitter</a></li>
-    <li><a href="#">Instagram</a></li>
-      </ul>
+  <div class="cont">
+    <div class="container">
+  <img src="BlogLogo.jpg" alt="">
+  <p class="learn">Learning</p>
+  <p class="date">Published 21 Dec 2023</p>
+  <h1>HTML & CSS foundations</h1>
+  <p class="description"> These languages are the backbone of every website, defining structure, content, and presentation.
+  </p>
+  <div class="another">
+  <img src="image-avatar.webp" alt="" > <h2>Greg Hooper</h2>
 </div>
-</div>
-
-
+  </div>
+  </div>
+  
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">OladeleJnr</a>.
